# konduit_webscrapper

./: main.py  pyproject.toml  readme.md  requirements.txt
