[project]
name = "konduit-webscrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bs4>=0.0.2",
    "faiss-cpu>=1.12.0",
    "groq>=0.32.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "tldextract>=5.3.0",
    "transformers>=4.57.0",
]
